<resources>
    <string name="app_name">SKOR</string>
    <string name="mixpanel_token">b00d930f9966278460545d8b0732f4e9</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="base_url">https://skorpoints.com/</string>

    <!--<string name="base_url">https://staging.skorpoints.com/</string>-->
    <string name="packagename">com.root.skor</string>
    <string name="gcm_product_id">456406577534</string>
    <!--279584859419 -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="map_key">AIzaSyDtzLNycJTwDj4UAuD7bb0YCVXdRENPWwc</string>
    <string name="action_example">Example action</string>
    <string name="intent_message">sent from SKOR App</string>
    <string name="action_settings">Settings</string>
    <string name="powerdbySkor">Powered by SKOR</string>
    <string name="mail">support@skorpoints.com</string>
    <string name="phone">+6285891699999</string>
    <string name="retake_pic">Retake Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="newly_added_item">This is newly added item %d</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="thankYouNote">Thank you for redeeming your rewards. Enjoy Your Rewards. Should there be any questions or enquiries, please contact support@skorpoints.com or (WA) 0858.916.99999. Keep collecting your points and redeem interesting rewards.</string>
    <string-array name="martial_sttaus">
         <item>Single</item>
         <item>Married</item>
         <item>Divorced</item>
    </string-array>





     <string name="add_geofences">Add geofences</string>
     <string name="remove_geofences">Remove geofences</string>

     <string name="geofences_added">Geofences added</string>
     <string name="geofences_removed">Geofences removed</string>

     <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <!--SENDER ID-->
    <string name="save_draft_title">Save Draft</string>
    <string name="save_draft_description">Your progress has been saved as draft</string>


    <string name="myChallenge">My Challenge</string>
    <string name="individual">Individual</string>
    <string name="team">Team</string>

    <string name="Congratulations">Congratulations!</string>
    <string name="back">BACK</string>
    <string name="MyChallenge">MY CHALLENGE</string>
    <string name="InviteFriends">INVITE FRIENDS</string>
    <string name="yogaClassInOffice">Yoga class in office</string>
    <string name="funniestarticle">Create funniest article</string>
    <string name="gymcheckin">Check in to Gym</string>
    <string name="healthyarticle">Read healthy living article</string>
    <string name="walkingactivity">Walking activity in the office area</string>
    <string name="runalongtogether">Run along together</string>
    <string name="checkIn">Check In</string>
    <string name="votenow">Vote Now</string>
    <string name="writearticle">Write an article</string>
    <string name="startwalking">Start walking</string>
    <string name="submitPin">SUBMIT PIN</string>

    <string name="_dash">-</string>
    <string name="enterTodayPin">Enter today\'s pin</string>
    <string name="WhichHasBeenProvidedInstructor">Which has been provided by the instructor</string>
    <string name="successfullyYogaClassChallenge">You have successfully checked in for day 1 in 10 day consecutive yoga class challenge.</string>
    <string name="done">Done</string>
    <string name="funawardsearchhint">Search Competitors</string>



</resources>
