<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:background="@null">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/dialog_bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgApp"
            android:orientation="vertical"
            android:padding="@dimen/_25sdp">

            <CustomClass.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/Congratulations"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/check" />

            <CustomClass.RobotoRegularTextView
                android:id="@+id/tvComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:text="You have completed Treasure Hunt | Find QR codes challenge"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <CustomClass.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="You earned"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <CustomClass.RobotoRegularTextView
            android:id="@+id/tvTotalPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="+100,000 Points"
            android:textColor="@color/bluecolor"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgChallenge"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/treasure_hunt" />

            <CustomClass.RobotoRegularTextView
                android:id="@+id/tvUnLockTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgChallenge"
                android:padding="@dimen/_3sdp"
                android:text="You unlock a new challenge of Treasure Hunt"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight=".5"
                android:background="@drawable/shape_congratulation_find_qr_white"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/back"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tvMyChallenge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight=".5"
                android:background="@drawable/shape_congratulation_find_qr_green"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/MyChallenge"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgTitle"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|top"
        android:background="@null"
        android:src="@drawable/treasure_hunt" />
</RelativeLayout>
